--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Veterinaria
+spring.application.name=veterinaria-backend
 
 #MySQL Database Connection
 spring.datasource.url=jdbc:mysql://localhost:3306/veterinaria?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
